# Robotics_ws

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: PROGRESS.md
so_arm101/: __init__.py
so_arm101/config/: joint_limits.yaml
so_arm101/real/: __init__.py  backend.py
so_arm101/sim/: __init__.py  backend.py  run_sim.py  scene.py
tests/: check_dynamic_tracking.py  check_holding_load.py  check_motors_health.py  x0_sim_smoke.py  x1_real_smoke.py  x2_real_to_sim_mirror.py  x3_sim_to_real_mirror.py
